--- a/page 1.html
+++ b/page 1.html
@@ -85,7 +85,7 @@
             position:absolute;
             left:20px;
         }
-        p{
+        h3{
             font-size:70px;
             font-family:Arial;
             text-align: center;
@@ -133,14 +133,14 @@
         </div>
     </div>
 </div>
-<p>Join a match!</p>
+<h3>Join a match!</h3>
 
 <body>
 
 <h1>SEARCH FOR VENUE!</h1>
 <h2>
 
-    <input type="text" name="text" value="Submit"><input type="submit" name="submit" value="Submit">
+    <input type="text" name="text" value="Submit"><input type="submit" name="SEARCH" value="Submit">
 </h2>
 
 
