--- a/Page 3.html
+++ b/Page 3.html
@@ -3,135 +3,111 @@
 <html>
 
 <head>
-	<title>Current Events</title>
-	<style>
-	/*Toolbar*/
-		#toolbar {
-			width:1000px;
-			height:100px;
-			background: #4C4CFF;
-			border-radius: 20px;
-			position: relative;
-		}
-		#logo {
-			color:white;
-			font-family:Helvetica;
-			position: absolute;
-			top:0px;
-			left:5px;
-			font-size:130%;
-		}
-		#searchBar {
-			position:absolute;
-			bottom:10px;
-			left:300px;
-		}
-		.searchBar input {
-			width:400px;
-			height:150px;
-		}
-		#user {
-			position:absolute;
-			right:10px;
-			top:-10px;
-			color:white;
-		}
-		#toolbarButtons {
-			position:absolute;
-			width:360px;
-			height:50px;
-			right:30px;
-			bottom:10px;
-			background:white;
-			border-radius:20px;
-		}
-		#yourEventButton {
-			width:120px;
-			height:50px;
-			position:absolute;
-			left:20px;
-			top:-5px;
-		}
-		#yourBookingButton {
-			width:120px;
-			height:50px;
-			position:absolute;
-			left:130px;
-			top:-5px;
-		}
-		#profileButton {
-			width:120px;
-			height:50px;
-			position:absolute;
-			left: 270px;
-			top:-5px;
-		}
-	/*Header*/
-		#header {
-			position:relative;
-			left:20px;
-		}
-	/*Events*/
-		#event {
-			position: relative;
-			left:20px;
-			background: blue;
-			width:300px;
-			height:400px;
-			border-radius:20px;
-		}
-		#eventProperties p {
-			color:white;
-		}
-		#eventProperties {
-			position:absolute;
-			left:20px;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <title>Football page 3</title>
+    <link href="Football%20CSS.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
-	<div id="toolbar">
-		<div id="logo">
-			<h1>LOGO</h1>
-		</div>
-		<div id="searchBar">
-			<input type="text" placeholder="Search">
-			<button id="searchButton">Search</button>
-		</div>
-		<div id="user">
-			<p>Hi User! | Logout</p>
-		</div>
-		<div id="toolbarButtons">
-			<div id="yourEventButton">
-			<h5>YOUR EVENT</h5>
-			</div>
-			<div id="yourBookingButton">
-			<h5>YOUR BOOKING</h5>
-			</div>
-			<div id="profileButton">
-			<h5>PROFILE</h5>
-			</div>
-		</div>
-	</div>
-	<div id="header">
-		<h1>CURRENT EVENTS</h1>
-	</div>
-	<div id="event">
-		<div id="eventProperties">
-			<p>EVENT NAME</p>
-			<p>ADDRESS:</p>
-			<p>CATEGORY:</p>
-			<p>TIME:</p>
-			<p>DATE:</p>
-			<p>TICKET PRICE:</p>
-			<p>PURCHASE DEADLINE:</p>
-			<p>NO OF TICKETS:</p>
-			<p>TICKETS AVAILABLE:</p>
-			<p>CONTACT INFO:</p>
-			<p>EXTRA INFO:</p>
-		</div>
-	</div>
+<div id="toolbar">
+    <div id="logo">
+        <h1>LOGO</h1>
+    </div>
+    <div id="searchBar">
+        <input type="text" placeholder="Search">
+        <button id="searchButton">Search</button>
+    </div>
+    <div id="user">
+        <p>Hi User! | Logout</p>
+    </div>
+    <div id="toolbarButtons">
+        <div id="yourEventButton">
+            <h5>YOUR EVENT</h5>
+        </div>
+        <div id="yourBookingButton">
+            <h5>YOUR BOOKING</h5>
+        </div>
+        <div id="profileButton">
+            <h5>PROFILE</h5>
+        </div>
+
+
+        <div class="yourevents">
+        <div id="yourevents">
+            <h6>Your events</h6>
+        </div>
+        <div id="yourevents">
+            <h6>|Create new event</h6>
+        </div>
+        <div id="yourevents">
+            <h6>|Event history</h6>
+        </div>
+        </div>
+    </div>
+</div>
+<div id="header">
+    <h1>YOUR EVENTS</h1>
+</div>
+<div class="event">
+    <div class="eventProperties">
+        <p>EVENT NAME</p>
+        <p>ADDRESS:</p>
+        <p>CATEGORY:</p>
+        <p>TIME:</p>
+        <p>DATE:</p>
+        <p>TICKET PRICE:</p>
+        <p>PURCHASE DEADLINE:</p>
+        <p>NO OF TICKETS:</p>
+        <p>TICKETS AVAILABLE:</p>
+        <p>CONTACT INFO:</p>
+        <p>EXTRA INFO:</p>
+
+    <p id="participants">
+        VIEW LIST OF PARTICIPANTS
+    </p>
+    </div>
+
+    <div class="eventProperties">
+        <p>EVENT NAME</p>
+        <p>ADDRESS:</p>
+        <p>CATEGORY:</p>
+        <p>TIME:</p>
+        <p>DATE:</p>
+        <p>TICKET PRICE:</p>
+        <p>PURCHASE DEADLINE:</p>
+        <p>NO OF TICKETS:</p>
+        <p>TICKETS AVAILABLE:</p>
+        <p>CONTACT INFO:</p>
+        <p>EXTRA INFO:</p>
+
+
+    <p id="participants">
+        VIEW LIST OF PARTICIPANTS
+    </p>
+</div>
+
+    <div class="eventProperties">
+        <p>EVENT NAME</p>
+        <p>ADDRESS:</p>
+        <p>CATEGORY:</p>
+        <p>TIME:</p>
+        <p>DATE:</p>
+        <p>TICKET PRICE:</p>
+        <p>PURCHASE DEADLINE:</p>
+        <p>NO OF TICKETS:</p>
+        <p>TICKETS AVAILABLE:</p>
+        <p>CONTACT INFO:</p>
+        <p>EXTRA INFO:</p>
+
+    <p id="participants">
+        VIEW LIST OF PARTICIPANTS
+    </p>
+
+    </div>
+
+</div>
+
+
 </body>
 
 </html>
